# playbooks

./: .gitignore  02-10-2017 - ProtectWise.json  02-10-2017 - ProtectWise.py  02-10-2017-Tech-Session-Protectwise.json  02-10-2017-Tech-Session-Protectwise.py  02_10_2017 - ProtectWise.json  02_10_2017 - ProtectWise.py  03_24_2017 - ThreatQuotient.json  03_24_2017 - ThreatQuotient.py  03_24_2017_tech_session.json  03_24_2017_tech_session.py  04_07_2017 - PhishMe.json  04_07_2017 - PhishMe.py  04_07_2017_tech_session_phishme.json  04_07_2017_tech_session_phishme.py  05_12_2017 - Advanced Tutorial.json  05_12_2017 - Advanced Tutorial.py  Attribute_Lookup_Dispatch.json  Cofense_Vision_Add_IOCs.json  Cofense_Vision_Add_IOCs.py  Cofense_Vision_Message_Quarantine.json  Cofense_Vision_Message_Quarantine.py  CommvaultCloud_Disable_Data_Aging.json  CommvaultCloud_Disable_Data_Aging.py  Commvault_Cloud_Disable_Data_Aging.json  Commvault_Cloud_Disable_Data_Aging.py  Delete_Exchange_Webshells.json  Delete_Exchange_Webshells.py  Identifier_Reputation_Analysis_Dispatch.json  Illumio_Block_Port.json  Illumio_Block_Port.py  Mission_Control_Automated_Enrichment.json  Mission_Control_Automated_Enrichment.py  Pure_Storage_Flash_Array_PG_Snapshot.json  Pure_Storage_Flash_Array_PG_Snapshot.py  Pure_Storage_Flash_Array_User_Deletion.json  Pure_Storage_Flash_Array_User_Deletion.py  Pure_Storage_Flash_Array_Volume_Snapshot.json  Pure_Storage_Flash_Array_Volume_Snapshot.py  Pure_Storage_Flash_Blade_File_System_Snapshot.json  (+421 more)
.github/tests/: find_changed_playbooks.py  pyproject.toml  requirements.txt  (+2 more)
(+111 files in other folders)
